--- a/index.html
+++ b/index.html
@@ -21,16 +21,19 @@
         <div class="avatar">
           <span><img src="./assets/build.png" alt="logo" /></span>
 
-          <img src="./assets/foto.png" alt="foto pessoal" />
+          <img id="userImage" src="./assets/foto.png" alt="foto pessoal" />
         </div>
         <h1 id="userName">Renan L. Silva</h1>
         <div class="git">
-          <a href="https://github.com/renyzeraa" target="_blank"
-            ><img src="./assets/github.svg" alt="" /> renyzeraa</a
-          >
+          <a id="userLink" href="https://github.com/renyzeraa" target="_blank"
+            ><img src="./assets/github.svg" alt="" />
+            <span id="userLogin">renyzeraa</span>
+          </a>
         </div>
 
-        <p>Web Developer Junior</p>
+        <p id="userBio">
+          Web Developer Junior 👨‍💻 and bacharel student of Computer Science 👨‍🎓
+        </p>
 
         <ul id="socialLinks">
           <li class="youtube">
@@ -56,6 +59,6 @@
         </ul>
       </div>
     </main>
-    <script src="./script.js"></script>
+    <script src="./scripts.js"></script>
   </body>
 </html>
